syntax = "proto3";
import "google/protobuf/any.proto";
import "SerializableDataType.proto";
package NES;

/*
The serializable wrapper definition for expression nodes
 */
message SerializableField{
  string name = 1;
  SerializableDataType type = 2;
}

message SerializableExpression {
  message ConstantValueExpression{
    SerializableDataValue value = 1;
  }
  message FieldAccessExpression{
    string fieldName = 1;
  }
  message FieldAssignmentExpression{
    FieldAccessExpression field = 1;
    SerializableExpression assignment = 2;
  }
  message AndExpression{
    SerializableExpression left = 1;
    SerializableExpression right = 2;
  }
  message EqualsExpression{
    SerializableExpression left = 1;
    SerializableExpression right = 2;
  }
  message GreaterEqualsExpression{
    SerializableExpression left = 1;
    SerializableExpression right = 2;
  }
  message GreaterExpression{
    SerializableExpression left = 1;
    SerializableExpression right = 2;
  }
  message LessEqualsExpression{
    SerializableExpression left = 1;
    SerializableExpression right = 2;
  }
  message LessExpression{
    SerializableExpression left = 1;
    SerializableExpression right = 2;
  }
  message NegateExpression{
    SerializableExpression child = 1;
  }
  message OrExpression{
    SerializableExpression left = 1;
    SerializableExpression right = 2;
  }
  message AddExpression{
    SerializableExpression left = 1;
    SerializableExpression right = 2;
  }
  message DivExpression{
    SerializableExpression left = 1;
    SerializableExpression right = 2;
  }
  message MulExpression{
    SerializableExpression left = 1;
    SerializableExpression right = 2;
  }
  message SubExpression{
    SerializableExpression left = 1;
    SerializableExpression right = 2;
  }
  SerializableDataType stamp = 1;
  google.protobuf.Any details = 2;
}

